# 2025-TeamControl-my-rendition-example-

./: .gitignore  Makefile  README.md  install.sh  installGRSIM.sh  installGameController.sh  installModule.py  installSSLVision.sh  main.py  pyproject.toml  requirement.txt  run.py  run_1_robot.py  run_single_process.py  setup.py  setup.sh
docs/: DifferenceFromLastVersion.md  HowToConnectToGrSim.md  Multiprocessing.md
old_stuff/: Movement.py  goToTarget.py  goalie&player.py  grSim_commands.py  skeleton_1.py  snapshot_wm.py  test.py
old_stuff/experimental_zone/: file1.c  file3.py  msg_processor.py  udp_receiver.c
scripts/: installGameController.sh
src/TeamControl/: main.py  main_BACKUP_5027.py  main_LOCAL_5027.py
src/TeamControl/Coms/: Action.py  BaseAction.py  RobotCommand.py  grSimAction.py  grSimRobotCommands.py
src/TeamControl/Examples/: GoToBall.py  PathPlaner.py  behaviourTreeExample.py  blackboard.py  blackboardUpdater.py  shootAtGoal.py
src/TeamControl/Experimental_Zone/: file4.py
src/TeamControl/GameControl/: GameState.py  Message.py  Processing.py
src/TeamControl/Model/: Game.py  GameControllerState.py  GameState.py  NewGame.py  Trajectory.py  __init__.py  frame.py  nearest.py  transform_cords.py  world.py
src/TeamControl/Network/: BaseUDP.py  IP-N-PORTS.md  NewServer.py  README.md  Receiver.py  Sender.py  Server.py  YamlSender.py  __init__.py  grSimSockets.py  receiver.py  robotCommand.py  robotserver.py  sender.py  ssl_networking.py  visionSockets.py
src/TeamControl/ProcessWorkers/: vision_runner.py  wm_runner.py  worker.py
src/TeamControl/RobotBehaviour/: Movement.py  (+4 more)
tests/: vision_message_test.py
tests/dispatcher_test/: m_process_test.py  message_recv_test.py  robot_command_creation_test.py
(+153 files in other folders)
