[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TeamControl"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
    "protobuf",
    "Shapely",
    "scikit-learn",
    "networkx",
    "PyYAML"
]

dynamic = [
    "version"
]

[tools.setuptools.packages.find]
where = ["src"]

[tools.setuptools.dynamic]
version = {attr = "TeamControl.__version__"}